# SEM-Stitcher

./: .gitmodules  CMakeLists.txt  README.md
proto/: semstitch.proto
runs/receive_2025_09_07T15_17_31Z_5382555d4307d412b4fa05c25d8ba137/: manifest.json
runs/receive_2025_09_07T16_15_13Z_cf98b37cde88f9e7452cd8f034b5323/: manifest.json
runs/receive_2025_09_07T16_20_25Z_4ab15085b2ebd5952bff3465a1439401/: manifest.json
runs/receive_2025_09_07T16_34_20Z_4e2cf56ebe65ccae2aee5dc3a3c73e42/: manifest.json
runs/receive_2025_09_07T16_57_31Z_b545f253c95a40437de861044fc4f40a/: manifest.json
runs/receive_2025_09_07T16_59_13Z_9e4a0bdd33170d8db516f32edddb1044/: manifest.json
runs/receive_2025_09_07T16_59_51Z_a3b7af9eeedc7589ab9764c3f90784b2/: manifest.json
runs/receive_2025_09_07T17_02_39Z_78708448a9fd254dd68d6504dad678a9/: manifest.json
runs/receive_2025_09_07T17_04_15Z_9b8cc47abd21a44192f86c3e6a74bdb2/: manifest.json
runs/receive_2025_09_07T17_54_49Z_bd8493d27aa14607555a22e6678851f4/: manifest.json
runs/receive_2025_09_07T17_55_16Z_ed44532a72754469b58e15849cd582a9/: manifest.json
runs/receive_2025_09_07T17_58_46Z_f7545a9015dbad3ce6086e6e5ea4d4e9/: manifest.json
runs/receive_2025_09_07T17_59_07Z_cc85858530645126c59313b17454189f/: manifest.json
scripts/: build.ps1  build.sh
src/semstitch/align/: GlobalSolver.cpp  GridAlign.cpp  PhaseCorrelator.cpp  Refiner.cpp
src/semstitch/backend/cpu/: CpuBackend.cpp  CpuBackend.hpp
src/semstitch/cli/: args.hpp  jitter_buffer.hpp  main.cpp  mist.hpp  mode_play.cpp  mode_receive.cpp  mode_simulate.cpp  modes.hpp  utils.cpp  utils.hpp
src/semstitch/compose/: Mosaic.cpp
src/semstitch/core/: BackendFactory.cpp  DriftCorrector.cpp  Stitcher.cpp
src/semstitch/core/include/semstitch/align/: GlobalSolver.hpp  GridAlign.hpp  PhaseCorrelator.hpp  Refiner.hpp
src/semstitch/core/include/semstitch/compose/: Mosaic.hpp
src/semstitch/core/include/semstitch/core/: Backend.hpp  Config.hpp  DriftCorrector.hpp  Frame.hpp  Stitcher.hpp
src/semstitch/core/include/semstitch/io/: ArtimagenSource.hpp  GrpcClient.hpp  GrpcServer.hpp  Recorder.hpp  ViewportScannerSource.hpp
src/semstitch/io/: ArtimagenSource.cpp  GrpcClient.cpp  GrpcServer.cpp  Recorder.cpp  ViewportScannerSource.cpp
